--- a/Automatic-Health-Graph-Generator/.devcontainer/.devcontainer.json
+++ b/Automatic-Health-Graph-Generator/.devcontainer/.devcontainer.json
@@ -1,1 +1,8 @@
-
+{
+  "name": "Python Development",
+  "image": "python:3.8",
+  "extensions": ["ms-python.python"],
+  "forwardPorts": [5000],
+  "postCreateCommand": "pip install -r requirements.txt"
+}
+ 
