--- a/Automatic-Health-Graph-Generator/.devcontainer/requirements.txt
+++ b/Automatic-Health-Graph-Generator/.devcontainer/requirements.txt
@@ -1,5 +1,5 @@
-matplotlib>=3.4.3
-pandas>=1.3.3
-numpy>=1.21.2
-mplcursors>=0.4
+matplotlib==3.8.2
+pandas==2.2.0
+numpy==1.26.3
+mplcursors==0.5.3
 
