--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,9 @@
         "ghcr.io/devcontainers/features/docker-in-docker:1": {
             "version": "latest",
             "moby": true
+        },
+        "ghcr.io/devcontainers/features/python:1": {
+          "version":"3.6"
         }
   }
 }
