--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,5 +11,6 @@
         "ghcr.io/devcontainers/features/python:1": {
           "version":"3.6"
         }
-  }
+  },
+  "postCreateCommand": "pip install -r requirements.txt"
 }
